--- a/test.tex
+++ b/test.tex
@@ -1061,14 +1061,17 @@ confirming the Planck volume and the Kotov length.
 
 \subsection {The Four Forces Connection in ppb Fine-Tuning}
 
-The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with extension to strong nuclear force in the Grand Unification Theory (GUT), but without any synthesis with gravitational force. However, the Topological Axis shows clearly that GUT with $1O^{16}$ GeV gauge boson seems confirmed. Very precisely, in section 4.2, it is proven that the CCO oscillation reveals a symmetry between the electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$. 
+The Particle standard model achieved the unification between electromagnetism and weak nuclear force, with extension to strong nuclear force in the Grand Unification Theory (GUT), but without any synthesis with gravitational force. However, the Topological Axis shows clearly that GUT gauge boson with $2.3 \cdot 1O^{16}$ GeV seems confirmed. Very precisely, in section 4.2, it is proven that the CCO oscillation reveals a symmetry between the electroweak and gravitational forces. So we look here for a precise relation involving the 4 force parameters, $a$ (electric), $a_w$ (weak nuclear), $f$ (strong nuclear) and $a_G$ (gravitation). The later force is equivalently represented by $p_G = P/2^{127/2}$, with $P = m_P/m_e$. 
 
  With the Atiyah constant $\Gamma = \gamma a/\pi$ (section 8.2), inside the 0.5 ppm measurement precision:  
  $a_{w} = F^2 = (137 \times 2 \Gamma)^{3}$. Now $a_{w}$ is a cube: $a_{w} = (\lambdabar_{e}/l_{eF})^{3}$, with $l_{eF} = (G_{F}/m_{e} c^{2})^{1/3}$:    
 \begin{equation}
 \lambdabar_e/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
-leading to $F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652$. Moreover:
+leading to 
+\begin{equation}
+F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
+Moreover:
 \begin{equation}
 aF/\sqrt(pH) = 2\pi afpH/F \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
 \end{equation}
@@ -1076,13 +1079,17 @@ where $\mu$ is the Muon/Electron mass ratio, \textit{inside its 20 ppb undetermi
 \begin{equation}
 \mu \approx 206.7682869
 \end{equation}
+Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
+the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
+development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
+incomplete and that Nature uses rational approximations of $\pi$}.
 From the Koide relation, the corresponding value is $\tau \approx 3477.441701$, tied to the economic number (0.6 ppm):
 \begin{equation}
 e^{e^e} \approx \tau (2a)^3/137^2
 \end{equation}
-From $\tau \approx e^{3e}$ and $8a \approx e^7$, this illustrates the reduction $e^e \approx 7 + 3e$. The pertinence of the economic number is confirmed.  
+From $\tau \approx e^{3e}$ and $8a \approx e^7$, this illustrates the reduction $e^e \approx 7 + 3e$. The pertinence of the economic number is confirmed.   
 
-The corresponding Koide-sanchez constant is $p_K \approx 1842.604994$, which was detected in Eq. (). This leads to the two ppb relations, where $\pi_a  = (355u+22)/(113u + 7)$, with $u = a\sqrt{2}/3$, and $H_e = 8 e^{2e}$ is the economic 33 ppm approximation of $H$:
+The corresponding Koide-sanchez constant is $p_K \approx 1842.604994$. This leads to three ppb relations, where $\pi_a  = (355u+22)/(113u + 7)$, with $u = a\sqrt{2}/3$, and $H_e = 8 e^{2e}$ is the economic 33 ppm approximation of $H$:
 \begin{equation}
 p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
 \end{equation}
@@ -1090,13 +1097,7 @@ p_K^4/pH \approx (4\pi_a)^4 a \approx (p_GH_e/aH)^4 D^2/n(D+1)
 \begin{equation}
 n\tau/2 \approx HH_e(D/(D+1))^3 (p_K/p_G)^9
 \end{equation}
-
 where $D$ and $D+1$ are the characteristic numbers of the Moonshine correlation\cite{Conway}. This confirms the Eddington's symmetry Hydrogen-Tau lepton\cite{Eddington}.
-
-Note that $4n/\Gamma$ is close (3.4 ppm) to the monstrous $5^{th}$ term 292.6345909 in
-the fractional development of $\pi$ which is itself very close to $n/2\pi$ to 3.4 ppm. Since the fractional
-development of $\pi$ is to this date an unsolved problem, \textit{this confirms that current mathematics is
-incomplete and that Nature uses rational approximations of $\pi$}.
 
 The above relations show a dual form, the first one without any numerical factor:
 \begin{equation}
