--- a/test.tex
+++ b/test.tex
@@ -1071,6 +1071,7 @@ The Particle standard model achieved the unification between electromagnetism an
 leading to 
 \begin{equation}
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
+\end{equation}
 Moreover:
 \begin{equation}
 aF/\sqrt(pH) = 2\pi afpH/F \approx \pi(4n/\Gamma)^3/p_G \approx \mu^2
