--- a/test.tex
+++ b/test.tex
@@ -1068,7 +1068,7 @@ The Particle standard model achieved the unification between electromagnetism an
 \begin{equation}
 \lambdabar_e/l_{eF} \approx 137 \times 2\Gamma
 \end{equation}
-leading to 
+leading to: 
 \begin{equation}
 F = a_{w}^{1/2} = E_{F} /m_{e} c^{2} \approx 573007.3652
 \end{equation}
