--- a/test.tex
+++ b/test.tex
@@ -1143,7 +1143,7 @@ The pertinence of these simple mononomial relations cannot be admitted by the st
 
 The Cosmos concept has long been forgotten. This is the reason why quantum physics is not really understood. Indeed, the simple fact that the propagation of anything, light or matter, is wavy, while the reception is a quantum, was a central mystery along the last century. This simple fact induces non-locality, so the necessary intervention of cosmology. Moreover, the optimal utilisation of the wavy propagation is holography, whose formalism is similar to the quantum one. Thus it is logical to find holographic relations in cosmology. Moreover, the similitude between the formalisms of quantum physics and holography is so tight that the double-step holography is similar to the double step of any interaction: tachyonic propagation - non-local cosmic optimisation - local quantum reception.
 
-Thus tachyonic-holography physics is necessary. Hence, it was an error to reject the bosonic string theory under the pretext it involves tachyons \cite{Woigt}. Quite the contrary, it is an essential advantage. This is confirmed by the central importance of the bosonic dimension d = 26 in the Topological Axis, which is nothing that the extension to smaller numbers of the Double Large Number coincidence, that only Eddington interpreted correctly, by rejecting the Single Bang model. Many invoked the temporal variation of the parameters, which is a negation of the idea that physics have universal laws. Finally, the expedient of the Anthropic Principle was imposed to the community by some leaders: this is definitely refuted in this article.
+Thus tachyonic-holography physics is necessary. Hence, it was an error to reject the bosonic string theory under the pretext it involves tachyons \cite{Woit}. Quite the contrary, it is an essential advantage. This is confirmed by the central importance of the bosonic dimension d = 26 in the Topological Axis, which is nothing that the extension to smaller numbers of the Double Large Number coincidence, that only Eddington interpreted correctly, by rejecting the Single Bang model. Many invoked the temporal variation of the parameters, which is a negation of the idea that physics have universal laws. Finally, the expedient of the Anthropic Principle was imposed to the community by some leaders: this is definitely refuted in this article.
 
 Moreover, the standard Holographic Principle must be generalized to wavelengths others than the Planck
 length, in particular the topon, the visible Universe wavelength, in 1D holography, which breaks by an enormous factor, about $10^{61}$ a taboo of current thinking: the Planck wall, resolving the vacuum energy dilemma factor $10^{122}$, and sustaining the Oscillatory bounce model which unfies the two main cosmologies.
