--- a/test.tex
+++ b/test.tex
@@ -78,7 +78,7 @@ The antique concept of permanent Cosmos is reintroduced as a perfect determinist
 
 \markboth{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}{\thepage}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
-Contents
+%Contents
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 
 1. The Hierarchy and Computation Principles
@@ -103,13 +103,13 @@ Contents
 
 7. Special holographic relations
 
-~~~    7.1. The conservation of information
+~~~    7.1. The photon and graviton masses
 
-~~~    7.1. The conservation of information
+~~~    7.2. The conservation of information
    
-~~~    7.2. The cosmic temperature
+~~~    7.3. The cosmic temperature
 
-~~     7.3. The Holic Principle and CCO 
+~~     7.4. The Holic Principle and CCO 
     
 8. The role of intermediary mathematical constants
 
