--- a/test.tex
+++ b/test.tex
@@ -146,21 +146,21 @@ The antique concept of permanent Cosmos is reintroduced as a perfect determinist
 
 There is presently an intense debate in the physics community. While a minority believes in an Ultimate Theory, a large majority have abandoned such hope and believes seriously in the extreme consequence of the `Anthropic Principle`, the Multiverse conundrum\cite{Carr}. The present article settles the debate in favor of a \textit{single steady-state flickering} cosmos (section 4), a kind of synthesis between the two historic main cosmologies, since it can be wieved as a \textit{Permanent Big Bang}.
 
-Only a minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, we show in section 2 that \textit{the later obeys the Topological Axis (Fig. (1), and, for the first time, they are connected with a series of ppb relations involving $e$, $\pi$ and $\gamma$} (section 9.4). This article shows also that the discovery of the sporadic groups, with, in particular, the monstruous moonshine correlation\cite{Borcherds}, is a crucial discovery for physics (section 8.5).
+Only a minority thinks Physics and Mathematics are really unified, while a large majority separates the two domains (so separating also Biology). The criteria for the uniqueness of the Cosmos is the mathematical character of the measured dimensionless parameters. Indeed, we show in section 2 that \textit{the later obeys the Topological Axis, Fig. 1, and, for the first time, they are connected with a series of ppb relations involving $e$, $\pi$ and $\gamma$} (section 9.4). This article shows also that the discovery of the sporadic groups, with, in particular, the monstruous moonshine correlation\cite{Borcherds}, is a crucial discovery for physics (section 8.5).
 
 In this debate unicity-multiplicity, pure mathematicians believe that progress can be obtained only when the Ultimate Theory has been discovered. However, the history of Physics shows that one can progress without knowing the ultimate laws. This no-said principle can be called the \textit{'Hierarchy Principle'}. So, when Proust and Dalton found whole numbers in chemical reactions, they were prefiguring atomic physics. The same for Balmer, spectral lines and wave mechanics. Idem for Mandeleiev, atomic masses and nuclear physics. Also, when Mandel found whole numbers in biology, he anticipated genetics. In the same manner, \textit{this article prefigures the fundamental theory, but precising its arithmetical foundation: the Holic Principle}, recalled in section 6. We interpret this central role of whole numbers by assuming that the Cosmos is a perfect computer. This is the very foundation of quantum physics. The section 3 shows the overall holographic quantification, breaking the Planck wall by a factor $10^{61}$, solving at last the vacuum quantum energy dilemma and \textit{justifying why the Cosmos is so large}.
 This \textit{'Optimal Computation Principle'} enligths the First Principle of Thermodynamics, the energy conservation. This is a more direct and logical explanation than the standard 'time uniformity'. 
 
 \textit{This reinstates the Laplace determinism}, involving non-local hidden variables, which are identified with the Cosmos, so rejecting the standard Copenhagen statistical interpretation of quantum mechanics. It seems that the pre-scientific role of chance is a common point between three misleading views in present mainstream thinking. Firstly, in biology, the assimilation of Darwin's rough argumentation with a scientific theory (see Discussion). Secondly, in quantum physics, the so-called `uncertainty principles`, which are only manifestations of the general wave propagation (Field and \textit{flickering} Matter), through Fourier transform properties. Thirdly, in cosmology, the above recurse to the Multiverse conundrum.
 
-While it was already shown that main dimensionless constants are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are \textit{calculation bases}.
+While it was already shown that main dimensionless parameters are present both in musical scales and in DNA characteristics \cite{Sanchez1}, this article goes further, by showing they are \textit{calculation bases}.
 
-The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the Holic Principle. An elementary calculation gives also a good approximation of the \textit{invariant} Hubble radius, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity \cite{Sanchez1}. We recall that, in Coherent Cosmology \cite{Sanchez1}, the Hubble radius $R$ is defined by the relative redshift law $\Delta f/f = R/l$ of $l$-distant galaxy groups, in the \textit{exponential} recession.
+The abnormal efficiency of elementary 3-fold dimensional analysis is justified in section 5, confirming the reality of the Grandcosmos, essential in Coherent Cosmology \cite{Sanchez1}. The $c$-free analysis gives simply and directly the Supercycle period in an all-deterministic Cosmos, with dimension d = 30, given by the Holic Principle. An elementary calculation gives also a good approximation of the \textit{invariant} Hubble radius, in a formula which was present for a century in astrophysics text-books: the limit of a star radius when the number of atoms reduces to unity. We recall that, in Coherent Cosmology, the Hubble radius $R$ is defined by the relative redshift law $\Delta f/f = R/l$ of $l$-distant galaxy groups, in the \textit{exponential} recession.
 %begin{equation}
 %\Delta f/f = R/l
 %end{equation}
 
-Finally, there is the central problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, annonced by the above discoverers, from Proust to Mandel. Indeed, Planck believed in the \textit{mathematical continuum}, and was reluctant of his own \textit{physical discovery}, until 1912, when Poincar\'{e} demonstrated that the quantification of matter-light interaction was mandatory\cite{Sanchez1}. The continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}, as shown in this article.
+Finally, there is the central problem of infinity. While it is welcome in mathematics, it is condemned in physics. The domination of mathematics blocked for years the quantum mechanics, annonced by the above discoverers, from Proust to Mandel. Indeed, Planck believed in the \textit{mathematical continuum}, and was reluctant of his own \textit{physical discovery}, until 1912, when Poincar\'{e} demonstrated that the quantification of matter-light interaction was mandatory\cite{Poincare1}. The continuum has the advantage that it simplifies formulas, by the virtue of the computation properties of $e$ and $\pi$. Thus, the vastness of the Cosmos is a compromise, but at the expense of \textit{a necessary rationalization of $e$ and $\pi$}, as shown in this article.
 
 Thus, there must exist multi-base algorithms able to explain the compatibility between these two principles, Hierarchy and Computation, which seems at first sight somewhat contradictory. The key is the analysis of the dimensionless parameters (about 30 in the standard model), which are tightly contrived by a mysterious 'fine-tuning'. Happily, the Hierarchy Principle applies:  only three dimensionless parameters: $a$, $p$, and $a_{G}$ are sufficient to explain the main structures of the world \cite{Carr}. Two of them are precisely measured: the electric constant $a$ $\approx$ 137.035999139(31), known with 0.23 ppb precision, and the proton-electron mass ratio $p$ $\approx$ 1836.15267245(75), known with 0.4 ppb precision. The gravitational coupling constant $a_{G}$ was the square of the ratio Planck/proton mass, subjected to a relatively large imprecision 10$^{-4}\!$ due to the imprecision on $G$ measurement. In fact, we consider rather the inverse of $\alpha$ and $\alpha_G$, we note $a$ and $a_G$. The present article will show that our notation, following Eddington\cite{Eddington}, is far more appropriate.
 
@@ -1249,6 +1249,10 @@ structure of the physical world'', Nature 278, 605--612 (1979).
 Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Sanchez1} Sanchez F.M.``A Coherent Resonant Cosmology Approach and Its Implications in Microphysics and Biophysics''. Springer. Progress in Theoretical Chemistry and Physics 30 (2017), p. 375--407; DOI 10.1007/978-3-319-50255-7-23.  Sanchez F.M. ``Coherent Cosmology''. Vixra.org:1601.0011 (2017). Sanchez F.M., Kotov V. and Bizouard C. ''Towards Coherent Cosmology'', Galilean Electrodynamics, special issue, 63--80 (2013).
+
+\bibitem{Poincare1} Poincar\'{e} H. ``Sur la th\'{e}orie des quanta``. J. de Physique. vol 2, p.5. (1912)
+
+\bibitem{Poincare2} Poincare H. ``Dernieres pens\'{e}es``. Flammarion, pp 102-103. (1913) 
 
 \bibitem{Eddington} Eddington A.S. ``The Fundamental Theory'' (Cambridge, 1946).
 
