--- a/test.tex
+++ b/test.tex
@@ -269,9 +269,9 @@ The universe radius amazingly appears as the limit of a mono-atomic star radius,
 
 The reason for this discrepancy is that \textit{Lema\^itre and Hubble considered galaxies of the Local Group, which do not participate the so-called space expansion}. In fact, it is sufficient to introduce a repulsive force proportional to separation distance, for explaining the steady-state exponential recession. \textit{The repulsive force is equivalent to reintroduce the Einstein cosmological constant, but with invariant value} $1/R^{2}$. There is no need of any additive so-called `dark energy`.
 
-The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, a typical galaxy group radius, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, (section 8.2), see Fig 1.
+The distance for which this force exceeds attractive gravitation between galaxies is about $10^{6}$ light years \cite{Sanchez1}, a typical galaxy group radius, which corresponds, in the Topological Axis, to the Atiyah Constant $\Gamma$, (section 8.3), see Fig 1.
 
-In the steady-state cosmology of Bondi, Gold and Hoyle \cite{Sanchez1}, such a repulsive force between galaxy groups is necessary, in order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group, another evacuation mechanism must occur: \textit{it would be the role of the massive black holes}.
+In the steady-state cosmology of Bondi, Gold \cite{Bondi} and Hoyle \cite{Hoyle}, such a repulsive force between galaxy groups is necessary, in order to avoid a big chill due to the thermodynamics second principle. But, inside a galaxy group, another evacuation mechanism must occur: \textit{it would be the role of the massive black holes}.
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Toponic Holographic Quantification}
@@ -283,7 +283,7 @@ The invariant visible Universe radius $R$ is then defined by the Schwarszchild r
 \begin{equation}
 S_{BH} = A/4 = \pi(R/l_{P})^{2} = 2\pi R/\lambdabar_{M}
 \end{equation}
-where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Sanchez1}, the Permanent Cosmology must favor such integral relations. Here it is the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
+where $A$ is the horizon sphere area and $l_{P} = (G\hbar/c^{3} )^{1/2}$ is the Planck's length. Note that, while the standard evolutionary cosmology use differential equations, which are not adapted to a single Universe, as Poincar\'{e} stated \cite{Poincare2}, the Permanent Cosmology must favor such integral relations. Here it is the \textit{Archimedes Testimony tying the Disk Area to its Perimeter}.
 
 In the standard evolutionary view, the observed homogeneity of causally disconnected regions of space is known as the so-called `horizon problem`, and is at the origin of the awkward inflation hypothesis, which is unnecessary in the steady-state model. Indeed, \textit{the critical condition is provided by the above very definition of $R$}.
 
@@ -298,7 +298,7 @@ S_{BH}\, = \pi(R/l_P )^{2} = 2\pi R^{(0)}_{GC} /l_{P}
 \end{equation}
 with $R^{(0)}_{GC} /R = l_{P} /\lambdabar_{M} \sim 10^{61}$. 
 The conservation of the time constant $t = R/c = R^{(0)}_{GC} /C$ introduces a canonical velocity $C \sim 10^{61} c$, 
-lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$, which can be identified with the $l_{P}$ - normalized quantum energy of vacuum, checked by the Casimir effect \cite{Duplantier}. The central problem of quantum cosmic physics is thus solved. Moreover, the objections against the Hawking approach using trans-Plankian frequencies are wiped out \cite{Damour}.
+lifting the veil on an energy larger than that of the visible Universe by a factor of $10^{122}$, which can be identified with the $l_{P}$ - normalized quantum energy of vacuum, checked by the Casimir effect \cite{Duplantier}. \textit{The central problem of quantum cosmic physics is thus solved}. Moreover, the objections against the Hawking approach using trans-Plankian frequencies are wiped out \cite{Damour}.
 
 In a better approximation, justified below, $R$ is replaced in the above relation by $R^{\prime} = 2\hbar^{2}/Gm_{N}^{3}
 \approx 18.105$ Gly, where $m_{N} = am_{e}$ is the Nambu mass\cite{Nambu}, of central importance in particle physics. Indeed, the half radius $R^{\prime}/2$ has a simpler definition than $R/2$: it corresponds to the elimination of $c$ between the classical electron radius and the Planck length \cite{Sanchez1}. In this way, the sphere of radius $R^{\prime}$ appears 
@@ -331,11 +331,12 @@ The mathematical continuity is excluded by the above Computation Principle, so t
 \begin{equation}
 t_M = \lambdabar_{M} /c = \hbar/Mc^2 \approx 1.33 \times 10^{-104}s 
 \end{equation}
-is the new candidate for the `Chronon`, the `quantum of time`, so the Oscillatory Bounce has a frequency about $10^{104}$ Hz  \cite{Sanchez2} and respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry \cite{Sanchez1}. \textit{The cosmic anti-matter dilemma is resolved by this matter-antimatter oscillation}. The tachyonic hypothesis is consistent with the non-local character of quantum mechanics.
+is the new candidate for the `Chronon`, the `quantum of time`, so the Oscillatory Bounce has a frequency about $10^{104}$ Hz  \cite{Sanchez2} and respects the CPT (Charge conjugation-Parity inversion-Time reversal) symmetry. \textit{The cosmic anti-matter dilemma is resolved by this matter-antimatter oscillation}. 
 
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}}
 \section{The Tachyonic Flickering Space-Time-Matter}
 \markright{F.M. Sanchez,\ V.A. Kotov,\ M. Grosmann,\ D. Weigel,\ R. Veysseyre,\ C. Bizouard,\ N. Flawisky,\ D. Gayral,\ L. Gueroult, \textit{Back to Cosmos}} 
+The tachyonic hypothesis is consistent with the non-local character of quantum mechanics.
 
 \subsection{The Single Electron Cosmology}
 
@@ -380,15 +381,15 @@ G \approx 6.6754552 \times 10^{-11} kg^{-1} m^{3} s^{-2} \\
 This value will be confirmed, in the ppb range, in Section 9.
 
 With the Kotov length $l_{K} = ct_{K}$ (see below), one notes that $(R/a_w l_K)^{1/2} $ is close to $\sqrt{a}$, while the replacement of $R$ by $R_{1}$ is about $4\pi$, the canonical form for $\sqrt{a}$, the deviation being compatible with $p/p_{0}$:
-$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. This $t_K$ value will be confirmed, in the ppb range, in section 9.4. 
+$$\sqrt{(R_{1} /a_{w} l_{K})} \approx 4\pi p/p_{0} \leftrightarrow t_{K} \approx 9 600.591445 s$$ a relation independent from $G$. This Kotov period $t_K$ value will be confirmed, in the ppb range, in section 9.4. It is associated \cite{Sanchez1} with the photon mass $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg. The connection with the graviton mass is proposed in section 7.1.
 
-From the holographic two-step interaction \cite{Sanchez1}, recalled in section 7.1, the Kotov period is associated with the photon mass, a conclusion independently reached by C. Marchal, apart a $2\pi$ factor \cite{Marchal}. It is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: 
-$m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg.
-The ratios with $2\pi$ times the Nambu mass corresponds (respectively within 2.9 \% and 3.7 \%)  to the \textit{canonical values} n = 24 and n = 26 (Fig.1). Thus $f(26)/f(24) \approx a_w $ to 0.8 \%. The following relation (0.1\%), will be very usefull in the section 5:
+%From the holographic two-step interaction \cite{Sanchez1}, recalled in section 7.1, the Kotov period is associated with the photon mass, a conclusion independently reached by C. Marchal, apart a $2\pi$ factor \cite{Marchal}. It is $m_{ph} = \hbar/c^{2} t_{K} \approx 1.222 \times 10^{-55}$ kg, and the graviton mass is: $m_{gr}\, = m_{ph} /a_{w} \approx 3.722 \times 10^{-67} $ kg. The ratios with $2\pi$ times the Nambu mass corresponds (respectively within 2.9 \% and 3.7 \%)  to the \textit{canonical values} n = 24 and n = 26 (Fig.1). Thus $f(26)/f(24) \approx a_w $ to 0.8 \%. 
+
+The following relation (0.1\%), will be very usefull in the section 5:
 \begin{equation}
 M/m_{ph} \approx (3/e)O^2_M
 \end{equation}
-with $O_M$ the cardinal order of the Monster group\cite{Aschbacher}.
+with $O_M$ the cardinal order of the Monster group\cite{Aschbacher}. The  Monster  Group, the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories \cite{Borcherds}. See below the dramatic properties of $O_M^3$ and $O_M^9$.
 
 \subsection{The omnipresence of CC0 in astrophysics}
 
@@ -443,7 +444,7 @@ It was shown in fact, that a number of superfast, with periods inferior to 2 day
 
 \subsection{The Tifft, Arp and Pioneer effects}
 
-Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed $v_1 \approx ca/F$ corresponding to the quantum resonance, with the electron classical radius $r_{e} = \lambdabar_e/a$  and where $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass:
+Another unexplained effect is the 75(5) km/s periodicity in the galactic redshift \cite{Tifft}. Now, this speed $v_1 \approx ca/F$ corresponds to the following quantum resonance, with the electron classical radius $r_{e} = \lambdabar_e/a$  and where $m_{F} = m_{e}\sqrt{a_{w}}$ is the Fermi mass:
 \begin{equation}
 v_{n}/n = v_{1} = \hbar /r_{e} m_{F}
 \end{equation}
@@ -543,7 +544,7 @@ T/t_M \approx (3/e\sqrt{2})O_M^3
 \end{equation}
 The simplest interpretation follows: \textit{this is the number of quantum events in a Super-cycle of period $T$, in a perfectly deterministic Cosmos}. 
 
-The  Monster  Group,  the largest of 26 sporadic groups, is suspected by some researchers to play a central role in Physics: indeed string theory allows a bridge between apparently no-connected mathematical theories \cite{Borcherds}. See below the dramatic properties of $O_M^3$ and $O_M^9$.
+
 
 Introducing the above Pioneer abnormal deceleration $g_{Pn}$, one gets the time: 
 $
@@ -1252,11 +1253,16 @@ Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Poincare1} Poincar\'{e} H. ``Sur la th\'{e}orie des quanta``. J. de Physique. vol 2, p.5. (1912)
 
-\bibitem{Poincare2} Poincare H. ``Dernieres pens\'{e}es``. Flammarion, pp 102-103. (1913) 
 
 \bibitem{Eddington} Eddington A.S. ``The Fundamental Theory'' (Cambridge, 1946).
 
 \bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat $\Lambda$CDM model'', arXiv: astro-ph/1607.01790v2 (2016).
+
+\bibitem{Bondi} Bondi H. and Gold T. ``the steady-state theory of the expanding universe``. M.N.R.A.S. 108, p. 252. (1948) 
+
+\bibitem{Bondi} Bondi H. and Gold T. ``A new model for the expanding universe``. M.N.R.A.S. 108, p. 272-382. (1948) 
+ 
+\bibitem{Poincare2} Poincare H. ``Dernieres pens\'{e}es``. Flammarion, pp 102-103. (1913) 
 
 \bibitem{Sanchez2} Sanchez F.M., Kotov V.A. and Bizouard C. ``Towards a synthesis of
 two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
