--- a/test.tex
+++ b/test.tex
@@ -484,7 +484,7 @@ This is a dramatic geometrical confirmation (Fig. 6) of the visible Universe –
 \caption {\textit{Geo-dimensional Universe-Grandcosmos couple}, with unit length the Electron Compton reduced wavelength. 
 In a 3D Super-space, logarithms of physical ratios are considered vectors. The Grandcosmos radius appears as the norm of the vector using for length and time projections the same value $R/\lambdabar_e = t/t_e$. For the mass projection it is $M^{\prime}/m_e$ where
 %that of the Hubble radius, and for mass ratio $M^{\prime}/m_e$.
-$M^{\prime}$ is the critical mass in the Grandcosmos reduced spherical hologram. This is a dramatic geometrical confirmation (not dependant of the base for logarithms) of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy. The Grandcosmos existence cannot be denied since the relation involving \textit{natural} logarithms with $e$ and $a$ reach precision $10^{-7}$.} 
+$M^{\prime}$ is the critical mass in the Grandcosmos reduced spherical hologram. This is a dramatic geometrical confirmation (not dependant of the base for logarithms) of the Extended (2D-1D) Holographic Principle applied to the Bekenstein-Hawking Universe entropy (Eq. 6). The Grandcosmos existence cannot be denied since the relation involving \textit{natural} logarithms with $e$ and $a$ reach precision $10^{-7}$.} 
 \end{figure}
 
 Another crucial point in Physics is the existence of invariant fundamental constants. Thus, association of three of them must give characteristic values of $M$, $L$, $T$. So, approaching a domain in Physics necessitates to calculate characteristic values ($M, L, T$) from the three universal constants which are the most pertinent in the considered domain. This Prospective Dimensional Analysis is largely used in Fluid Mechanics, where the equations are intractable. However, it is largely ignored in other domains because there is not really mathematical foundation, apart the above essential remarks. The triplet $c, G, \hbar$ which define the above Planck units is a notable exception. However, there is no standard interpretation for the Planck mass. Note that  it appears above (Eq. 8) and in Biology \cite{Sanchez1}. 
@@ -495,7 +495,7 @@ The elimination of $c$ in the above $R$ formula means that the simplest basic di
 analysis starting from $\hbar$, $G$ and $m$, the Electron-Proton-Neutron mean mass, gives a good
 approximation for $R/2$. Indeed, in the Hypothesis of a coherent Cosmos, it is logical to discard $c$
 which is far two small a speed. This has not been observed during one century since $c$ is always
-believed to be the single mandatory foundation of space-time. The warning of Poincar\'{e}\cite{Sanchez1}, the true
+believed to be the single mandatory foundation of space-time. The warning of Poincar\'{e}\cite{Poincare3}, the true
 discoverer of Relativity: \textit{`use 4D space-time, but do not confound Space and Time`} has long been
 forgotten, and physicists have unwisely put $c = 1$ in their equations.
 
@@ -1253,7 +1253,6 @@ Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Poincare1} Poincar\'{e} H. ``Sur la th\'{e}orie des quanta``. J. de Physique. vol 2, p.5. (1912)
 
-
 \bibitem{Eddington} Eddington A.S. ``The Fundamental Theory'' (Cambridge, 1946).
 
 \bibitem{Bonvin} V. Bonvin, F. Courbin, S. H. Suyu, P. J. Marshall, C. E. Rusu, D. Sluse, M. Tewes, K. C. Wong, T. Collett, C. D. Fassnacht, T. Treu, M. W. Auger, S. Hilbert, L. V. E. Koopmans, G. Meylan, N. Rumbaugh, A. Sonnenfeld, C. Spiniello ``H0LiCOW V. New COSMOGRAIL time delays of HE0435-1223: H0 to 3.8\% precision from strong lensing in a flat $\Lambda$CDM model'', arXiv: astro-ph/1607.01790v2 (2016).
@@ -1262,7 +1261,7 @@ Superalgebras''. Invent. Math. 109, 405--444 (1992).
 
 \bibitem{Bondi} Bondi H. and Gold T. ``A new model for the expanding universe``. M.N.R.A.S. 108, p. 272-382. (1948) 
  
-\bibitem{Poincare2} Poincare H. ``Dernieres pens\'{e}es``. Flammarion, pp 102-103. (1913) 
+\bibitem{Poincare2} Poincar\'{e} H. ``Dernieres pens\'{e}es``. Flammarion, pp 102-103. (1913) 
 
 \bibitem{Sanchez2} Sanchez F.M., Kotov V.A. and Bizouard C. ``Towards a synthesis of
 two cosmologies: the steady-state flickering Universe''. J. Cosmology 17,
@@ -1323,6 +1322,8 @@ connection''. Astrophys. Space Sci. 285(2):429 (2006).
 \bibitem{Nieto} Nieto M. and Anderson J. ``Using early data to illuminate the
 Pioneer anomaly''. Pi Class. Quant. Grav. 22, 5345-5354 (2005);
 arXiv:ge-qc/0507052.
+
+\bibitem{Poincare3} Poincar\'{e} H. ``La m\'{e}canique nouvelle``. Gauthiers-Villars (1924). Jacques Gabay (1989). 
 
 \bibitem{Bars} Bars I. ``Gauge Duality, Conformal Symmetry, and Space-Time with
 Two Times''. Phys. Rev. D 58 (1998); hep-th/9803188, 
